level0 (not working yet)

--- a/MeetingMayhem/templates/MultilevelSample.html
+++ b/MeetingMayhem/templates/MultilevelSample.html
@@ -75,10 +75,14 @@
     </style>
 </head>
 <body>
-   <div class="level unlocked" onclick="selectLevel(0)"> 
+   <!-- <div class="level unlocked" onclick="selectLevel(0)"> 
       Level 0
       <div class="unlock"></div>
-  </div>
+  </div> -->
+  <div class="level unlocked">
+    <a href="level0">Level 0</a>
+    <div class="unlock"></div>
+</div>
    <div class="level locked" onclick="selectLevel(1)">
       Level 1
       <div class="lock"></div>
