edited timer and fixed spacing issues

--- a/MeetingMayhem/templates/messages.j2
+++ b/MeetingMayhem/templates/messages.j2
@@ -233,7 +233,7 @@ function decrypt(id_button){
 {% macro timer() -%}
 <style>
         #duration {
-            width: 60px; /* Adjust the width as needed */
+            width: 60px; border-color: rgb(201, 191, 12); border-radius:7px; /* Adjust the width as needed */
         }
 </style>
 <div id="inputBox">
