--- a/MeetingMayhem/templates/messages.html
+++ b/MeetingMayhem/templates/messages.html
@@ -11,7 +11,7 @@
 <!-- this tells jinja that we are using a template -->
 {% block content %}
 <!-- this piece of code tells jinja where to put the html for this page in the parent template -->
-<h1 class="float-start" style="color: black; font-weight: bold; text-shadow: 2px 2px 2px rgb(250, 236, 33); padding-left: 0.4in">Messages</h1>
+<h1 class="float-start" style="color: black; font-weight: bold; text-shadow: 2px 2px 2px rgb(250, 236, 33); padding-left: 0.4in; margin-left: -50px; margin-right: 50px">Messages</h1>
 <button id="vote_bt-{{current_user.username}}" style="box-shadow: none; font-size: 20px; padding: 13px !important" class="btn btn-primary btn-lg float-end gray-blue"
    data-bs-toggle="button" autocomplete="off">Ready to Vote</button>
 <script>
